k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
      - name: api
        image: cherroman/api:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5

        volumeMounts:
        - name: uploads
          mountPath: /app/uploads

        - name: uploads
          mountPath: /app/generated_files

      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc
