k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
      - name: auth
        image: cherroman/auth:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8001

        livenessProbe:
          httpGet:
            path: /docs
            port: 8001
          initialDelaySeconds: 15
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /docs
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 5
