k8s/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ollama
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ollama

  template:
    metadata:
      labels:
        app: ollama

    spec:
      containers:
      - name: ollama
        image: ollama/ollama

        ports:
        - containerPort: 11434

        volumeMounts:
        - name: ollama-storage
          mountPath: /root/.ollama

      volumes:
      - name: ollama-storage
        persistentVolumeClaim:
          claimName: ollama-pvc
