k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
      - name: rabbitmq

        image: rabbitmq:3-management

        ports:
        - containerPort: 5672
        - containerPort: 15672
