k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
      - name: worker
        image: ai-platform-worker:v2
        imagePullPolicy: Never

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        volumeMounts:
        - name: uploads
          mountPath: /app/uploads

        - name: uploads
          mountPath: /app/generated_files

      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc
