k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service
  namespace: dev

spec:
  selector:
    app: api

  ports:
  - port: 8000
    targetPort: 8000

  type: NodePort
