k8s/auth-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  namespace: dev

spec:
  selector:
    app: auth

  ports:
  - port: 8001
    targetPort: 8001

  type: NodePort
